# 1

./: .gitignore  1.c  1.h  1.pc  1_sys.h  1forbidstd.h  ARGUMENT_TYPING.md  BUGS  FAQ.md  KERNEL-MODULE  LICENSE  Makefile  NOTES  NOTES2  NOTES3  PROBLEM.md  README.md  ancillary-notes.rs  atrshell  budding  check.py  copy_of_ls.c_from_coreutils.c  deatr.c  dired.py  explaner  go  goals  hello.c  hi  ls.c  map1  mapnotes  plans-for-tty  shell.py  straceshell  test_bash  watch_dired.py  wtf.c  wtf_ls  wut.py
lib1-rs/: Cargo.toml  deatr-rs  deatr.rs  hello-rs  hello.rs  lib1.rs
lib1-rs/l1_fmt/: Cargo.toml  l1_fmt.rs
